--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -1,7 +1,8 @@
 {
     "accueil": "Accueil",
     "selection": "Selection",
-    "about": "à-propos",
+    "about": "A-propos",
+    "A propos": "A propos de nous",
     "boutique": "Boutique",
     "Choisir_categorie": "Choisir une categorie",
     "creation_compte" :"Creation compte",
